--- a/index.html
+++ b/index.html
@@ -6,14 +6,32 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class="light-theme">
     <h1> task list </h1>
-    <p id="msg"> Current task</p>
+    <!-- <p id="msg"> Current task</p> -->
+    <p> Current task</p>
     <ul>
-        <li class="list">Add visual styles</li>
-        <li class="list">Add light and dark themes</li>
-        <li>Enable swithching the teme</li>
+        <li class="list">
+            Add visual styles
+        </li>
+        <li class="list">
+            Add light and dark themes
+        </li>
+        <li>
+            Enable swithching the teme
+        </li>
     </ul>
+    <div>
+        <button class="btn">
+            Dark
+        </button>
+    </div>
+
+    <script src="app.js">
+
+    </script>
+
+    <noscript>Please enable JavaScript to view the</noscript>
 </body>
 
 </html>
